@@ -45,6 +45,7 @@
 #include <Mailler.h>
 #include <MaillerParallel.h>
 #include <Modif_bord_to_raccord.h>
+#include <ModifyDomaineAxi1D.h>
 #include <NettoieNoeuds.h>
 #include <Octree.h>
 #include <OrienteFacesBord.h>
@@ -145,60 +146,61 @@ Lire_Tgrid inst39;verifie_pere(inst39);
 Mailler inst40;verifie_pere(inst40);
 MaillerParallel inst41;verifie_pere(inst41);
 Modif_bord_to_raccord inst42;verifie_pere(inst42);
-NettoieNoeuds inst43;verifie_pere(inst43);
-OctreeRoot inst44;verifie_pere(inst44);
-OrienteFacesBord inst45;verifie_pere(inst45);
-Orienter_Simplexes inst46;verifie_pere(inst46);
-Pave inst47;verifie_pere(inst47);
-Periodique inst48;verifie_pere(inst48);
-Point inst49;verifie_pere(inst49);
-Polyedre inst50;verifie_pere(inst50);
-Polyedriser inst51;verifie_pere(inst51);
-Polygone inst52;verifie_pere(inst52);
-Postraiter_domaine inst53;verifie_pere(inst53);
-PrecisionGeom inst54;verifie_pere(inst54);
-Prisme inst55;verifie_pere(inst55);
-Quadrangle_VEF inst56;verifie_pere(inst56);
-Raccord inst57;verifie_pere(inst57);
-Raccord_local_homogene inst58;verifie_pere(inst58);
-Raccord_distant_homogene inst59;verifie_pere(inst59);
-Raccords inst60;verifie_pere(inst60);
-Raffiner_Simplexes inst61;verifie_pere(inst61);
-Raffiner_anisotrope inst62;verifie_pere(inst62);
-Raffiner_isotrope_parallele inst63;verifie_pere(inst63);
-Rectangle inst64;verifie_pere(inst64);
-Rectangle_2D_axi inst65;verifie_pere(inst65);
-Rectangle_axi inst66;verifie_pere(inst66);
-Rectify_Mesh inst67;verifie_pere(inst67);
-Redresser_hexaedres_vdf inst68;verifie_pere(inst68);
-Refine_Mesh inst69;verifie_pere(inst69);
-RegroupeBord inst70;verifie_pere(inst70);
-Remove_Invalid_Internal_Boundaries inst71;verifie_pere(inst71);
-Remove_elem inst72;verifie_pere(inst72);
-Reordonner inst73;verifie_pere(inst73);
-Reorienter_tetraedres inst74;verifie_pere(inst74);
-Reorienter_triangles inst75;verifie_pere(inst75);
-Rotation inst76;verifie_pere(inst76);
-Scatter inst77;verifie_pere(inst77);
-Segment inst78;verifie_pere(inst78);
-Segment_axi inst79;verifie_pere(inst79);
-Sous_Zone inst80;verifie_pere(inst80);
-SupprimeBord inst81;verifie_pere(inst81);
-Tetraedre inst82;verifie_pere(inst82);
-Tetraedriser inst83;verifie_pere(inst83);
-Tetraedriser_homogene inst84;verifie_pere(inst84);
-Tetraedriser_homogene_compact inst85;verifie_pere(inst85);
-Tetraedriser_homogene_fin inst86;verifie_pere(inst86);
-Tetraedriser_par_prisme inst87;verifie_pere(inst87);
-Transformer inst88;verifie_pere(inst88);
-Triangle inst89;verifie_pere(inst89);
-Trianguler inst90;verifie_pere(inst90);
-Trianguler_H inst91;verifie_pere(inst91);
-Trianguler_fin inst92;verifie_pere(inst92);
-TroisDto2D inst93;verifie_pere(inst93);
-TroisDto2Daxi inst94;verifie_pere(inst94);
-Verifier_Qualite_Raffinements inst95;verifie_pere(inst95);
-Verifier_Simplexes inst96;verifie_pere(inst96);
-Zone inst97;verifie_pere(inst97);
-Zones inst98;verifie_pere(inst98);
+ModifyDomaineAxi1D inst43;verifie_pere(inst43);
+NettoieNoeuds inst44;verifie_pere(inst44);
+OctreeRoot inst45;verifie_pere(inst45);
+OrienteFacesBord inst46;verifie_pere(inst46);
+Orienter_Simplexes inst47;verifie_pere(inst47);
+Pave inst48;verifie_pere(inst48);
+Periodique inst49;verifie_pere(inst49);
+Point inst50;verifie_pere(inst50);
+Polyedre inst51;verifie_pere(inst51);
+Polyedriser inst52;verifie_pere(inst52);
+Polygone inst53;verifie_pere(inst53);
+Postraiter_domaine inst54;verifie_pere(inst54);
+PrecisionGeom inst55;verifie_pere(inst55);
+Prisme inst56;verifie_pere(inst56);
+Quadrangle_VEF inst57;verifie_pere(inst57);
+Raccord inst58;verifie_pere(inst58);
+Raccord_local_homogene inst59;verifie_pere(inst59);
+Raccord_distant_homogene inst60;verifie_pere(inst60);
+Raccords inst61;verifie_pere(inst61);
+Raffiner_Simplexes inst62;verifie_pere(inst62);
+Raffiner_anisotrope inst63;verifie_pere(inst63);
+Raffiner_isotrope_parallele inst64;verifie_pere(inst64);
+Rectangle inst65;verifie_pere(inst65);
+Rectangle_2D_axi inst66;verifie_pere(inst66);
+Rectangle_axi inst67;verifie_pere(inst67);
+Rectify_Mesh inst68;verifie_pere(inst68);
+Redresser_hexaedres_vdf inst69;verifie_pere(inst69);
+Refine_Mesh inst70;verifie_pere(inst70);
+RegroupeBord inst71;verifie_pere(inst71);
+Remove_Invalid_Internal_Boundaries inst72;verifie_pere(inst72);
+Remove_elem inst73;verifie_pere(inst73);
+Reordonner inst74;verifie_pere(inst74);
+Reorienter_tetraedres inst75;verifie_pere(inst75);
+Reorienter_triangles inst76;verifie_pere(inst76);
+Rotation inst77;verifie_pere(inst77);
+Scatter inst78;verifie_pere(inst78);
+Segment inst79;verifie_pere(inst79);
+Segment_axi inst80;verifie_pere(inst80);
+Sous_Zone inst81;verifie_pere(inst81);
+SupprimeBord inst82;verifie_pere(inst82);
+Tetraedre inst83;verifie_pere(inst83);
+Tetraedriser inst84;verifie_pere(inst84);
+Tetraedriser_homogene inst85;verifie_pere(inst85);
+Tetraedriser_homogene_compact inst86;verifie_pere(inst86);
+Tetraedriser_homogene_fin inst87;verifie_pere(inst87);
+Tetraedriser_par_prisme inst88;verifie_pere(inst88);
+Transformer inst89;verifie_pere(inst89);
+Triangle inst90;verifie_pere(inst90);
+Trianguler inst91;verifie_pere(inst91);
+Trianguler_H inst92;verifie_pere(inst92);
+Trianguler_fin inst93;verifie_pere(inst93);
+TroisDto2D inst94;verifie_pere(inst94);
+TroisDto2Daxi inst95;verifie_pere(inst95);
+Verifier_Qualite_Raffinements inst96;verifie_pere(inst96);
+Verifier_Simplexes inst97;verifie_pere(inst97);
+Zone inst98;verifie_pere(inst98);
+Zones inst99;verifie_pere(inst99);
 }
